--- a/Lydia's Luau.html
+++ b/Lydia's Luau.html
@@ -70,5 +70,6 @@ Relapse survival rate is 0%. </p>
 <p align="center" class="style11">&nbsp;</p>
 <p align="center" class="style21">&nbsp;</p>
 
+<a href="Lydia's%20Luau2.html">(old version)</a> 
 
 </body></html>
